using System;
using System.Collections.Generic;
using System.Text;

namespace Shapes
{
    public interface IShapeInfo
    {
        void DisplayShape();
    }
}