namespace Shapes
{
    public abstract class Shape
    {
        public abstract void Draw();
    }
}