using System;
using System.Collections.Generic;
using System.Text;

namespace Shapes
{
    public enum TriangleType
    {
        Isosceles=0,
        Rectangular=1,
        Obtuse,
        Echilateral
    }
}