using System;
using System.Collections.Generic;
using System.Text;

namespace Shapes
{
    public static class UnitExplanation
    {
        public static void Units()
        {
            Console.WriteLine("Units explanation: ");
            Console.WriteLine("DU - Distance unit");
            Console.WriteLine("AU - Area unit");
            Console.WriteLine("VU - Volume unit");
            Console.WriteLine();
        }
    }
}